--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https://github.com/SnowLukin
 description: "Personal website of Snow Lukin."
 keywords: "turingmachinesimulator"
 skills: "IOS Developer - Android Developer"
-meta_author: LastName FirstName
+meta_author: Snow Lukin
 
 # Google webmaster tools
 google_verify:
