added info about xEditor

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Snow Lukin
 email: snowlukin@gmail.com
 url: https://github.com/SnowLukin
 description: "Personal website of Snow Lukin."
-keywords: "turingmachinesimulator"
-skills: "IOS Developer - Android Developer"
+keywords: "turingmachinesimulator, xeditor"
+skills: "Mobile Developer"
 meta_author: Snow Lukin
 
 # Google webmaster tools
